feat: Add CSS styling and Nigerian flag to homepage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Emmanuel nduka Eze | WDD 130</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
@@ -12,13 +13,13 @@
             <a href="wwr/">Rafting Website</a>
         </nav>
     </header>
-    <main>
+    <main class="grid">
         <h1>Emmanuel nduka Eze | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Emmanuel nduka Eze" width="200">
         <p>Hello! My name is Emmanuel nduka Eze and I am from Nigeria. I am excited to learn about web development!</p>
     </main>
     <footer>
-        <p>&copy;2025 &#127796; Emmanuel nduka Eze &#127796; Nigeria</p>
+        <p>&copy;2025 &#127796; Emmanuel nduka Eze &#127796; Nigeria <img src="images/flag.svg" alt="Nigerian Flag" width="50"></p>
     </footer>
 </body>
 </html>
