--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Emmanuel nduka Eze | WDD 130</title>
+    <title>Emmanuel Nduka Eze | WDD 130</title>
+    <meta name="description" content="Emmanuel Nduka Eze', this is course wdd130 page which enable graders to grade my weekly assignments.">
+    <meta name="author" content="Emmanuel Nduka Eze">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -13,13 +15,18 @@
             <a href="wwr/">Rafting Website</a>
         </nav>
     </header>
-    <main class="grid">
-        <h1>Emmanuel nduka Eze | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Emmanuel nduka Eze" width="200">
-        <p>Hello! My name is Emmanuel nduka Eze and I am from Nigeria. I am excited to learn about web development!</p>
+    <main>
+        <h1>Emmanuel Nduka Eze | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello, my name is Emmanuel Nduka Eze" width="200">
+        <p>Hello! My name is Emmanuel Nduka Eze and I am from Lagos, Nigeria. I am excited to learn about web development!</p>
     </main>
+    <aside>
+        <h2>Lagos, Nigeria</h2>
+        <img src="images/flag.svg" alt="Nigerian Flag">
+        <p>Lagos is the most populous city in Nigeria and the African continent. It is one of the fastest growing cities in the world and one of the most populous urban areas.</p>
+    </aside>
     <footer>
-        <p>&copy;2025 &#127796; Emmanuel nduka Eze &#127796; Nigeria <img src="images/flag.svg" alt="Nigerian Flag" width="50"></p>
+        <p>&copy;2025 Emmanuel Nduka Eze Lagos, Nigeria</p>
     </footer>
 </body>
 </html>
