I added some Images

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>About Us | White Water Rafting</title>
     <meta name="description" content="About Us page for the White Water Rafting website project.">
-    <meta name="author" content="[Your Name]">
+    <meta name="author" content="[Emmanuel Nduka Eze]">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,9 +39,11 @@
             <h2>Adventure Awaits You!</h2>
             <img src="images/rafting14_1024.jpg" alt="Rafting adventure 1">
             <img src="images/rafting26_600.jpg" alt="Rafting adventure 2">
-            <img src="images/rafting3.jpg" alt="Rafting adventure 3">
-            <img src="images/rafting4.jpg" alt="Rafting adventure 4">
-            <img src="images/rafting5.jpg" alt="Rafting adventure 5">
+            <img src="images/Image1.jpg" alt="Rafting adventure 3">
+            <img src="images/Image 2.jpg" alt="Rafting adventure 4">
+            <img src="images/Image 3.jpg" alt="Rafting adventure 5">
+            <img src="images/Image 4.jpg" alt="Rafting adventure 6">
+            <img src="images/Image6.jpg" alt="Rafting adventure 7">
         </section>
     </main>
     <footer>
