--- a/wwr/about.html
+++ b/wwr/about.html
@@ -39,11 +39,12 @@
             <h2>Adventure Awaits You!</h2>
             <img src="images/rafting14_1024.jpg" alt="Rafting adventure 1">
             <img src="images/rafting26_600.jpg" alt="Rafting adventure 2">
-            <img src="images/Image1.jpg" alt="Rafting adventure 3">
-            <img src="images/Image 2.jpg" alt="Rafting adventure 4">
-            <img src="images/Image 3.jpg" alt="Rafting adventure 5">
-            <img src="images/Image 4.jpg" alt="Rafting adventure 6">
-            <img src="images/Image6.jpg" alt="Rafting adventure 7">
+            <img src="wwr/images/image1.1.jpg" alt="Rafting adventure 3">
+            <img src="images/Images1.2.jpg" alt="Rafting adventure 4">
+            <img src="images/Images1.3.jpg" alt="Rafting adventure 5">
+            <img src="images/Images1.4.jpg" alt="Rafting adventure 6">
+            <img src="images/Images1.5.jpg" alt="Rafting adventure 7">
+            <img src="images/Images1.6.jpg" alt="Rafting adventure 8">
         </section>
     </main>
     <footer>
