--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,10 +24,10 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero-image.jpg" alt="Rafting on a river">
+            <img src="../images/hero-image.jpg" alt="Rafting on a river">
             <h1>White Water Rafting</h1>
             <article>
-                <img src="images/happy-client.jpg" alt="Happy client">
+                <img src="../images/happy-client.jpg" alt="Happy client">
                 <p>Our purpose is to provide the best white water rafting experience for our customers. We are dedicated to safety and fun.</p>
             </article>
         </div>
