--- a/wwr/about.html
+++ b/wwr/about.html
@@ -39,7 +39,7 @@
             <h2>Adventure Awaits You!</h2>
             <img src="images/rafting14_1024.jpg" alt="Rafting adventure 1">
             <img src="images/rafting26_600.jpg" alt="Rafting adventure 2">
-            <img src="wwr/images/image1.1.jpg" alt="Rafting adventure 3">
+            <img src="images/image1.1.jpg" alt="Rafting adventure 3">
             <img src="images/Images1.2.jpg" alt="Rafting adventure 4">
             <img src="images/Images1.3.jpg" alt="Rafting adventure 5">
             <img src="images/Images1.4.jpg" alt="Rafting adventure 6">
