--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -40,11 +40,14 @@
             <img src="images/rafting14_1024.jpg" alt="Rafting adventure 1">
             <img src="images/rafting26_600.jpg" alt="Rafting adventure 2">
             <img src="images/image1.1.jpg" alt="Rafting adventure 3">
-            <img src="images/Images1.2.jpg" alt="Rafting adventure 4">
-            <img src="images/Images1.3.jpg" alt="Rafting adventure 5">
-            <img src="images/Images1.4.jpg" alt="Rafting adventure 6">
-            <img src="images/Images1.5.jpg" alt="Rafting adventure 7">
-            <img src="images/Images1.6.jpg" alt="Rafting adventure 8">
+            <img src="images/images1.2.jpg" alt="Rafting adventure 4">
+            <img src="images/images1.3.jpg" alt="Rafting adventure 5">
+            <img src="images/images1.4.jpg" alt="Rafting adventure 6">
+            <img src="images/images1.5.jpg" alt="Rafting adventure 7">
+            <figure>
+                <img src="images/images1.6.jpg" alt="Rafting adventure 8">
+                <figcaption>Rafting adventure 8</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
