updated contact page with real images and layout

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>About Us | White Water Rafting</title>
     <meta name="description" content="About Us page for the White Water Rafting website project.">
-    <meta name="author" content="[Emmanuel Nduka Eze]">
+    <meta name="author" content="Emmanuel Nduka Eze">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,10 +24,10 @@
     </header>
     <main>
         <div class="hero">
-            <img src="../images/hero-image.jpg" alt="Rafting on a river">
+            <img src="images/hero-image.jpg" alt="Rafting on a river">
             <h1>White Water Rafting</h1>
             <article>
-                <img src="../images/happy-client.jpg" alt="Happy client">
+                <img src="images/happy-client.jpg" alt="Happy client">
                 <p>Our purpose is to provide the best white water rafting experience for our customers. We are dedicated to safety and fun.</p>
             </article>
         </div>
@@ -35,15 +35,29 @@
             <h2>History</h2>
             <p>Our company was founded in 2005 by a group of passionate rafters. We have been providing safe and exciting rafting trips for over 15 years.</p>
         </section>
-        <section>
+        <section class="adventure-gallery">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting14_1024.jpg" alt="Rafting adventure 1">
-            <img src="images/rafting26_600.jpg" alt="Rafting adventure 2">
-            <img src="images/image1.1.jpg" alt="Rafting adventure 3">
-            <img src="images/images1.2.jpg" alt="Rafting adventure 4">
-            <img src="images/images1.3.jpg" alt="Rafting adventure 5">
-            <img src="images/images1.4.jpg" alt="Rafting adventure 6">
-            <img src="images/images1.5.jpg" alt="Rafting adventure 7">
+            <figure>
+                <img src="images/rafting14_1024.jpg" alt="Rafting adventure 1">
+            </figure>
+            <figure>
+                <img src="images/rafting26_600.jpg" alt="Rafting adventure 2">
+            </figure>
+            <figure>
+                <img src="images/image1.1.jpg" alt="Rafting adventure 3">
+            </figure>
+            <figure>
+                <img src="images/images1.2.jpg" alt="Rafting adventure 4">
+            </figure>
+            <figure>
+                <img src="images/images1.3.jpg" alt="Rafting adventure 5">
+            </figure>
+            <figure>
+                <img src="images/images1.4.jpg" alt="Rafting adventure 6">
+            </figure>
+            <figure>
+                <img src="images/images1.5.jpg" alt="Rafting adventure 7">
+            </figure>
             <figure>
                 <img src="images/images1.6.jpg" alt="Rafting adventure 8">
                 <figcaption>Rafting adventure 8</figcaption>
@@ -51,7 +65,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 White Water Rafting | [Emmanuel Nduka Eze]</p>
+        <p>&copy; 2025 White Water Rafting | Emmanuel Nduka Eze</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
                 <img src="images/facebook.svg" alt="Facebook">
