--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -35,7 +35,7 @@
                 <p>(123) 456-7890</p>
                 <div class="map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.6789012345!2d-111.891031!3d40.760780!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ1JzM4LjgiTiAxMTHCsDUzJzI3LjciVw!5e0!3m2!1sen!2sus!4v1620000000000!5m2!1sen!2sus" 
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    width="600" height="450" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </section>
             <form action="review.html" method="get">
@@ -95,9 +95,9 @@
     <footer>
         <p>&copy; 2025 White Water Rafting | Emmanuel Nduka Eze | <a href="images/wireframe.png">Contact Us Wireframe</a></p>
         <nav class="socialmedia">
-            <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook"></a>
-            <a href="https://twitter.com"><img src="images/twitter.svg" alt="Twitter"></a>
-            <a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram"></a>
+            <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook Page"></a>
+            <a href="https://twitter.com"><img src="images/twitter.svg" alt="Twitter Profile"></a>
+            <a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram Profile"></a>
         </nav>
     </footer>
 </body>
